--- a/index.html
+++ b/index.html
@@ -30,6 +30,9 @@ body{margin:0;font-family:sans-serif;background:var(--bg-page);color:var(--text-
 button{padding:0.5rem 1rem;border:none;border-radius:8px;background:var(--accent);color:#000;cursor:pointer;}
 .onboardCard{background:var(--bg-card);padding:2rem;border-radius:18px;text-align:center;}
 .highlightWord{padding:0.2rem 0.5rem;border-radius:8px;transition:background 0.3s;}
+input[type="text"]{padding:0.4rem 0.6rem;border-radius:6px;border:none;margin:0.2rem;}
+select{padding:0.4rem 0.6rem;border-radius:6px;border:none;margin:0.2rem;}
+label{margin:0.2rem;}
 </style>
 </head>
 <body>
@@ -45,6 +48,7 @@ button{padding:0.5rem 1rem;border:none;border-radius:8px;background:var(--accent
     <option>Cloud</option>
   </select>
   <div id="landingCompanionVisual" class="companionWhisp"></div>
+  <input type="text" id="friendNickname" placeholder="Name your friend">
   <select id="languageSelect">
     <option value="en-US">English</option>
     <option value="es-ES">Spanish</option>
@@ -62,7 +66,7 @@ button{padding:0.5rem 1rem;border:none;border-radius:8px;background:var(--accent
 <div id="chatContainer" class="hidden">
   <div id="companionDisplay">
     <div id="companionVisual" class="companionWhisp"></div>
-    <p id="companionName">Whisp</p>
+    <p id="companionName">Friend</p>
   </div>
   <div id="chatBox"></div>
   <div id="chatControls">
@@ -103,24 +107,17 @@ button{padding:0.5rem 1rem;border:none;border-radius:8px;background:var(--accent
 
 <script>
 // -------------------- Globals --------------------
-let userMessages = [];
-let repeatCounts = {};
-let lastBotMessage = "";
-let windowVoiceSpeed = 1.0;
+let userMessages=[];
+let repeatCounts={};
+let lastBotMessage="";
+let windowVoiceSpeed=1.0;
 
 // -------------------- Companion Reactions --------------------
-const companionReactions = {
+const companionReactions={
   Whisp:{happy:{scale:1.1,color:"#b3e5fc",boxShadow:"0 0 20px #81d4fa"},neutral:{scale:1,color:"#b3e5fc",boxShadow:"none"},thinking:{scale:0.95,color:"#90caf9",boxShadow:"0 0 10px #64b5f6"},curious:{scale:1.05,color:"#82d0f4",boxShadow:"0 0 15px #64b5f6"}},
   Star:{happy:{scale:1.2,color:"gold",boxShadow:"0 0 25px gold"},neutral:{scale:1,color:"gold",boxShadow:"none"},excited:{scale:1.3,color:"yellow",boxShadow:"0 0 30px yellow"},curious:{scale:1.1,color:"#ffd700",boxShadow:"0 0 15px gold"}},
   Robot:{happy:{scale:1.05,color:"silver",boxShadow:"0 0 15px #ccc"},neutral:{scale:1,color:"silver",boxShadow:"none"},curious:{scale:1.1,color:"#aaa",boxShadow:"0 0 10px #999"}},
   Cloud:{happy:{scale:1.1,color:"#e0f7fa",boxShadow:"0 0 20px #b2ebf2"},neutral:{scale:1,color:"#e0f7fa",boxShadow:"none"},surprised:{scale:1.15,color:"#b2ebf2",boxShadow:"0 0 15px #81d4fa"},curious:{scale:1.05,color:"#b2ebf2",boxShadow:"0 0 10px #81d4fa"}}
-};
-
-// -------------------- Conversation Starters --------------------
-const conversationStarters={
-  travel:["Hello! How was your trip?","Where would you like to travel today?"],
-  food:["What's your favorite dish?","Have you tried something new lately?"],
-  daily:["Good morning! Ready to chat?","Hi there! How’s your day going?"]
 };
 
 // -------------------- Companion Selection on Landing --------------------
@@ -144,6 +141,10 @@ function startSession(){
   localStorage.setItem("companion",companion);
   updateCompanionVisual(companion);
 
+  const friendName=document.getElementById("friendNickname").value.trim()||companion;
+  localStorage.setItem("friendNickname",friendName);
+  document.getElementById("companionName").textContent=friendName;
+
   const lang=document.getElementById("languageSelect").value;
   localStorage.setItem("language",lang);
 
@@ -153,13 +154,13 @@ function startSession(){
   document.getElementById("landingPage").classList.add("hidden");
   document.getElementById("chatContainer").classList.remove("hidden");
 
-  showTyping(`Welcome ${nickname}! ${companion} is ready to chat.`);
+  showTyping(`Welcome ${nickname}! ${friendName} is ready to chat.`);
 
   if(resume){
     const messages=JSON.parse(localStorage.getItem("userMessages"))||[];
     if(messages.length){
       const lastMsg=messages[messages.length-1];
-      setTimeout(()=>showTyping(`Last time you said: "${lastMsg}". Want to continue from there?`),1200);
+      setTimeout(()=>showTyping(`${friendName} remembers you said: "${lastMsg}". Want to continue from there?`),1200);
       return;
     }
   }
@@ -178,17 +179,17 @@ function updateCompanionVisual(id){
     case "Robot": visual.classList.add("companionRobot"); break;
     case "Cloud": visual.classList.add("companionCloud"); break;
   }
-  document.getElementById("companionName").textContent=id;
+  const friendName=localStorage.getItem("friendNickname")||id;
+  document.getElementById("companionName").textContent=friendName;
 }
 
-// -------------------- Time-aware / Season-aware Starter --------------------
+// -------------------- Time-aware Starter --------------------
 function getTimeOfDay(){
   const hour=new Date().getHours();
   if(hour<12) return "morning";
   if(hour<18) return "afternoon";
   return "evening";
 }
-
 function getTimeAwareStarter(){
   const timeOfDay=getTimeOfDay();
   const startersByTime={
@@ -237,6 +238,7 @@ function speakBotText(text){
 }
 
 function showTyping(text){
+  const friendName=localStorage.getItem("friendNickname")||localStorage.getItem("companion");
   let i=0;
   const div=document.createElement("div");
   div.className="message bot";
@@ -250,7 +252,7 @@ function showTyping(text){
   visual.style.boxShadow=reaction.boxShadow;
 
   function type(){
-    if(i<text.length){div.textContent+=text[i];i++;setTimeout(type,20);}
+    if(i<text.length){div.textContent=`${friendName}: ${text.slice(0,i+1)}`; i++; setTimeout(type,20);}
     else{
       lastBotMessage=text;
       speakBotText(text);
@@ -284,7 +286,8 @@ function sendMessage(msg=null){
   let response=getAIResponse(userText);
 
   if(repeatCounts[userText]>=3){
-    response=`Hmm, you keep saying "${userText}". Want to see your most-used words?`;
+    const friendName=localStorage.getItem("friendNickname")||localStorage.getItem("companion");
+    response=`Hmm, you keep saying "${userText}". ${friendName} suggests reviewing your most-used words.`;
     triggerCompanionReaction("curious");
     showReviewPrompt();
   }
@@ -309,6 +312,7 @@ function showSummary(){
   list.innerHTML="";
   const visual=document.getElementById("companionVisual");
   const companionId=localStorage.getItem("companion")||"Whisp";
+  const friendName=localStorage.getItem("friendNickname")||companionId;
   summary.forEach(([word,count],idx)=>{
     const li=document.createElement("li");
     li.textContent=`${word} — ${count} times`;
@@ -346,7 +350,6 @@ function getAIResponse(userText){
 
 // -------------------- Signature --------------------
 console.log("Signed, ELYS");
-
 </script>
 </body>
 </html>
